tests/ui/associated-item/associated-item-enum.stderr
error[E0599]: no variant or associated item named `mispellable` found for enum `Enum` in the current scope
  --> $DIR/associated-item-enum.rs:17:11
   |
LL | enum Enum { Variant }
   | --------- variant or associated item `mispellable` not found for this enum
...
LL |     Enum::mispellable();
   |           ^^^^^^^^^^^ variant or associated item not found in `Enum`
   |
help: there is an associated function `misspellable` with a similar name
   |
LL |     Enum::misspellable();
   |              +

error[E0599]: no variant or associated item named `mispellable_trait` found for enum `Enum` in the current scope
  --> $DIR/associated-item-enum.rs:18:11
   |
LL | enum Enum { Variant }
   | --------- variant or associated item `mispellable_trait` not found for this enum
...
LL |     Enum::mispellable_trait();
   |           ^^^^^^^^^^^^^^^^^ variant or associated item not found in `Enum`
   |
help: there is an associated function `misspellable_trait` with a similar name
   |
LL |     Enum::misspellable_trait();
   |              +

error[E0599]: no variant or associated item named `MISPELLABLE` found for enum `Enum` in the current scope
  --> $DIR/associated-item-enum.rs:19:11
   |
LL | enum Enum { Variant }
   | --------- variant or associated item `MISPELLABLE` not found for this enum
...
LL |     Enum::MISPELLABLE;
   |           ^^^^^^^^^^^ variant or associated item not found in `Enum`
   |
help: there is an associated constant `MISSPELLABLE` with a similar name
   |
LL |     Enum::MISSPELLABLE;
   |              +

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0599`.
